Fix Some style issue

--- a/public/css/Styles/ss.css
+++ b/public/css/Styles/ss.css
@@ -7,7 +7,7 @@
 }
 
 body{
-  background-image: url('../../Img/bg2.jpg');
+  background-image: url('../../img/bg2.jpg');
   background-position: center;
   background-size: cover;
   background-repeat: repeat;
