--- a/public/css/Styles/sstt.css
+++ b/public/css/Styles/sstt.css
@@ -4,96 +4,96 @@
     margin: 0;
     padding: 0%;
     font-family: 'Poppins', sans-serif;
-    
-  }
-  
-  body{
+
+}
+
+body{
     background-image: url(../Img/bg2.jpg);
     background-position: center;
     background-size: cover;
     background-repeat: repeat;
-    position: relative;  
-    
-  }
-  
-  .column {
-      float: left;
-      padding: 200px;
-      height: fit-content;
-  }
-    
-    .left {
-      width: 1%;
-      background-color:rgba(228, 228, 228, 0.644);
-      align-items: left;
-  }
-    
-    .right {
-      width: 99%;
-      background-color:rgb(247, 247, 247, 0.644);
-  }
-  
-    .row:after {
-      display: table;
-      clear: both;
-    }
-  
-    .donatee{
-      padding-top: 5%;
-      box-sizing: border-box;
-      align-content: center;
-    }
-  
-  
-    .header{
-      margin: auto;
-      text-align: center;
-    }
-  
-    /*////////////////////////*NAVBAR SECTION*/
-  
-    .nav{
-      width: 1518px;
-      background-color: #fa655f;
-      margin: auto;
-      overflow: auto;
-    }
-  
-    ul{
-      margin: 0;
-      padding: 0;
-      list-style: none;
-    }
-    li{
-      float: right;
-    }
-    a:link{
-      width: 125px;
-      text-decoration: none;
-      display: block;
-      text-align: center;
-      padding: 20px;
-      text-transform: uppercase;
-      font-size: 18px;
-      font-family: 'Poppins', sans-serif;
-      }
-      li a{
-        color: black;
-      }
-  
-    a:hover{
-      background-color: rgb(224, 232, 255);
-      transition: 0.2s;
-    }
-    .nav a.active {
-      background-color: #2977ecd8;
-      color: white;
-    }
-  
-  
-  /*///////////////// Cards *//*///////////////*/
-  
-  :root {
+    position: relative;
+
+}
+
+.column {
+    float: left;
+    padding: 200px;
+    height: fit-content;
+}
+
+.left {
+    width: 1%;
+    background-color:rgba(228, 228, 228, 0.644);
+    align-items: left;
+}
+
+.right {
+    width: 99%;
+    background-color:rgb(247, 247, 247, 0.644);
+}
+
+.row:after {
+    display: table;
+    clear: both;
+}
+
+.donatee{
+    padding-top: 5%;
+    box-sizing: border-box;
+    align-content: center;
+}
+
+
+.header{
+    margin: auto;
+    text-align: center;
+}
+
+/*////////////////////////*NAVBAR SECTION*/
+
+.nav{
+    width: 1518px;
+    background-color: #fa655f;
+    margin: auto;
+    overflow: auto;
+}
+
+ul{
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+li{
+    float: right;
+}
+a:link{
+    width: 125px;
+    text-decoration: none;
+    display: block;
+    text-align: center;
+    padding: 20px;
+    text-transform: uppercase;
+    font-size: 18px;
+    font-family: 'Poppins', sans-serif;
+}
+li a{
+    color: black;
+}
+
+a:hover{
+    background-color: rgb(224, 232, 255);
+    transition: 0.2s;
+}
+.nav a.active {
+    background-color: #2977ecd8;
+    color: white;
+}
+
+
+/*///////////////// Cards *//*///////////////*/
+
+:root {
     --red: hsl(0, 78%, 62%);
     --cyan: hsl(180, 62%, 55%);
     --orange: hsl(34, 97%, 64%);
@@ -104,93 +104,93 @@
     --weight1: 100;
     --weight2: 200;
     --weight3: 400;
-  }
-  
-  .attribution { 
-    font-size: 11px; 
-    text-align: center; 
-    
-  }
-  .attribution a { 
-    color: hsl(228, 45%, 44%); 
-  }
-  
-  h1:first-of-type {
+}
+
+.attribution {
+    font-size: 11px;
+    text-align: center;
+
+}
+.attribution a {
+    color: hsl(228, 45%, 44%);
+}
+
+h1:first-of-type {
     font-weight: var(--weight1);
     color: var(--varyDarkBlue);
-  
-  }
-  
-  h1:last-of-type {
+
+}
+
+h1:last-of-type {
     color: var(--varyDarkBlue);
-  }
-  
-  @media (max-width: 400px) {
+}
+
+@media (max-width: 400px) {
     h1 {
         font-size: 1.5rem;
     }
-  }
-  
-  
-  
-  .box p {
+}
+
+
+
+.box p {
     color: var(--grayishBlue);
-    
-  }
-  
-  .box {
+
+}
+
+.box {
     border-radius: 5px;
     box-shadow: 0px 15px 25px -15px var(--grayishBlue);
     padding: 10px;
-    margin: 10px;  
+    margin: 10px;
     background-color: #e0e8ff;
-  }
-  
-  img {
+}
+
+img {
     float: right;
-  }
-  
-  @media (max-width: 400px) {
+}
+
+@media (max-width: 400px) {
     .box {
         height: 90px;
     }
-  }
-  
-  @media (max-width: 950px) and (min-width: 450px) {
+}
+
+@media (max-width: 950px) and (min-width: 450px) {
     .box {
         text-align: center;
         height: 120px;
     }
-  }
-  
-  .cyan {
+}
+
+.cyan {
     border-top: 5px solid var(--cyan);
-  }
-  .red {
+}
+.red {
     border-top: 5px solid var(--red);
-  }
-  .blue {
+}
+.blue {
     border-top: 5px solid var(--blue);
-  }
-  .orange {
+}
+.orange {
     border-top: 5px solid var(--orange);
-  }
-  
-  h2 {
+}
+
+h2 {
     color: var(--varyDarkBlue);
     font-weight: var(--weight3);
     text-align: center;
-    font-size: 25px; 
- }
-  
-  
-  @media (min-width: 750px) {
+    font-size: 25px;
+}
+
+
+@media (min-width: 750px) {
     .row1-container {
         display: flex;
         justify-content: center;
         align-items: center;
     }
-    
+
     .row2-container {
         display: flex;
         justify-content: center;
@@ -202,21 +202,21 @@
     }
     .box {
         width: 18%;
-     
+
     }
     .header p {
         width: 10%;
     }
-    
-  }
-  
-  .pic{
+
+}
+
+.pic{
     width: 100px;
     height: 100px;
-  }
-  
- 
-  .button{
+}
+
+
+.button{
     background: #FF4742;
     border: 1px solid #FF4742;
     border-radius: 6px;
@@ -239,64 +239,64 @@
     -webkit-user-select: none;
     touch-action: manipulation;
     vertical-align: middle;
-  }
-  
-  .button:hover,
-  .button:active {
+}
+
+.button:hover,
+.button:active {
     background-color: initial;
     background-position: 0 0;
     color: #FF4742;
-  }
-  
-  .button:active {
+}
+
+.button:active {
     opacity: .5;
-  }
+}
 
 
-  #customers {
+#customers {
     font-family: Arial, Helvetica, sans-serif;
     border-collapse: collapse;
     width: 80%;
     margin-left: 10%;
-  }
-  
-  #customers td, #customers th {
+}
+
+#customers td, #customers th {
     border: 1px solid #ddd;
     padding: 8px;
-  }
-  
-  #customers tr:nth-child(even){background-color: #f2f2f2;}
-  
-  #customers tr:hover {background-color: #ddd;}
-  
-  #customers th {
+}
+
+#customers tr:nth-child(even){background-color: #f2f2f2;}
+
+#customers tr:hover {background-color: #ddd;}
+
+#customers th {
     padding-top: 12px;
     padding-bottom: 12px;
     text-align: left;
     background-color: hsl(212, 86%, 64%);
     color: white;
     font-size: 18px;
-  }
+}
 
-  
 
-  .custom-select {
+
+.custom-select {
     position: relative;
     font-family: Arial;
     text-align: center;
     margin-left: 44%;
-  }
-  
-  .custom-select select {
+}
+
+.custom-select select {
     display: none; /*hide original SELECT element:*/
-  }
-  
-  .select-selected {
+}
+
+.select-selected {
     background-color: DodgerBlue;
-  }
-  
-  /*style the arrow inside the select element:*/
-  .select-selected:after {
+}
+
+/*style the arrow inside the select element:*/
+.select-selected:after {
     position: absolute;
     content: "";
     top: 14px;
@@ -305,165 +305,458 @@
     height: 0;
     border: 6px solid transparent;
     border-color: #fff transparent transparent transparent;
-  }
-  
-  /*point the arrow upwards when the select box is open (active):*/
-  .select-selected.select-arrow-active:after {
+}
+
+/*point the arrow upwards when the select box is open (active):*/
+.select-selected.select-arrow-active:after {
     border-color: transparent transparent #fff transparent;
     top: 7px;
-  }
-  
-  /*style the items (options), including the selected item:*/
-  .select-items div,.select-selected {
+}
+
+/*style the items (options), including the selected item:*/
+.select-items div,.select-selected {
     color: #ffffff;
     padding: 12px 20px;
     border: 1px solid transparent;
     border-color: transparent transparent rgba(0, 0, 0, 0.1) transparent;
     cursor: pointer;
     user-select: none;
-  }
-  
-  /*style items (options):*/
-  .select-items {
+}
+
+/*style items (options):*/
+.select-items {
     position: absolute;
     background-color: DodgerBlue;
     top: 100%;
     left: 0;
     right: 0;
     z-index: 99;
-  }
-  
-  /*hide the items when the select box is closed:*/
-  .select-hide {
+}
+
+/*hide the items when the select box is closed:*/
+.select-hide {
     display: none;
-  }
-  
-  .select-items div:hover, .same-as-selected {
+}
+
+.select-items div:hover, .same-as-selected {
     background-color: rgba(203, 224, 255, 0.685);
-  }
+}
 
 
-  
+
 /*Clearing Floats*/
 .cf:before, .cf:after{
-  content:"";
-  display:table;
+    content:"";
+    display:table;
 }
 
 .cf:after{
-  clear:both;
+    clear:both;
 }
 
 .cf{
-  zoom:1;
-}    
+    zoom:1;
+}
 /* Form wrapper styling */
 
 .search-wrapper {
-  width: 450px;
-  margin: 120px auto 30px auto;
-  margin-top: 2%;
-  border-radius: 40px;
-background: transparent;
-  box-shadow: 0 4px 20px -2px #c0c0c0;
+    width: 450px;
+    margin: 120px auto 30px auto;
+    margin-top: 2%;
+    border-radius: 40px;
+    background: transparent;
+    box-shadow: 0 4px 20px -2px #c0c0c0;
 }
 
 /* Form text input */
 
 .search-wrapper input {
-padding-left: 20px;
-  width: 330px;
-  height: 20px;
-  padding: 10px 5px;
-  float: left;   
-  font: bold 17px 'Poppins', sans-serif;
-  border: 0;
-  background: #fff;
-  border-radius: 40px;
-  border-top-style: none;
+    padding-left: 20px;
+    width: 330px;
+    height: 20px;
+    padding: 10px 5px;
+    float: left;
+    font: bold 17px 'Poppins', sans-serif;
+    border: 0;
+    background: #fff;
+    border-radius: 40px;
+    border-top-style: none;
 }
 
 .search-wrapper input:focus {
-  outline: 0;
-  background: #fff;
-  box-shadow: 0 0 2px rgba(0,0,0,0.8) inset;
+    outline: 0;
+    background: #fff;
+    box-shadow: 0 0 2px rgba(0,0,0,0.8) inset;
 }
 
 .search-wrapper input::-webkit-input-placeholder {
- color: #999;
- font-weight: normal;
- font-style: normal;
-padding-left: 20px;
+    color: #999;
+    font-weight: normal;
+    font-style: normal;
+    padding-left: 20px;
 }
 
 .search-wrapper input:-moz-placeholder {
-  
-  color: #999;
-  font-weight: normal;
-  font-style: italic;
+
+    color: #999;
+    font-weight: normal;
+    font-style: italic;
 }
 
 .search-wrapper input:-ms-input-placeholder {
-  color: #999;
-  font-weight: normal;
-  font-style: italic;
-border-style: none;
-}   
+    color: #999;
+    font-weight: normal;
+    font-style: italic;
+    border-style: none;
+}
 
 /* Form submit button */
 .search-wrapper button {
-  overflow: visible;
-  position: relative;
-  float: right;
-  border: 0;
-  padding: 0;
-  cursor: pointer;
-  height: 40px;
-  width: 110px;
-  font: 17px/40px 'Poppins', sans-serif;
-  color: #fff;
-  text-transform: uppercase;
-  background: #ff4242;
-  border-radius: 40px;
-  text-shadow: 0 -1px 0 rgba(0, 0 ,0, .3);
-}  
+    overflow: visible;
+    position: relative;
+    float: right;
+    border: 0;
+    padding: 0;
+    cursor: pointer;
+    height: 40px;
+    width: 110px;
+    font: 17px/40px 'Poppins', sans-serif;
+    color: #fff;
+    text-transform: uppercase;
+    background: #ff4242;
+    border-radius: 40px;
+    text-shadow: 0 -1px 0 rgba(0, 0 ,0, .3);
+}
 
-.search-wrapper button:hover{    
-   background: #c3d6ff;
-   color: black;
-  }  
+.search-wrapper button:hover{
+    background: #c3d6ff;
+    color: black;
+}
 
 .search-wrapper button:active,
-.search-wrapper button:focus{  
-  background: #198cff;
-  outline: 0;  
+.search-wrapper button:focus{
+    background: #198cff;
+    outline: 0;
 }
 
 .search-wrapper button:focus:before,
 .search-wrapper button:active:before{
-      border-right-color: #c42f2f;
-}     
+    border-right-color: #c42f2f;
+}
 
 .search-wrapper button::-moz-focus-inner { /* remove extra button spacing for Mozilla Firefox */
-  border: 0;
-  padding: 0;
-}   
+    border: 0;
+    padding: 0;
+}
 
 input{
 
-  padding: 12px 20px;
-  margin: 8px 0;
-  box-sizing: border-box;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
 
 }
 
 select{
-  padding: 12px 20px;
-  margin: 8px 0;
-  box-sizing: border-box;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
 }
 textarea{
-  padding: 12px 20px;
-  margin: 8px 0;
-  box-sizing: border-box;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+}
+
+
+
+
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+}
+
+body {
+    margin: 0;
+    font-family: Roboto, -apple-system, 'Helvetica Neue', 'Segoe UI', Arial, sans-serif;
+
+}
+
+.forms-section {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.section-title {
+    font-size: 32px;
+    letter-spacing: 1px;
+    color: blue;
+}
+
+.forms {
+    display: flex;
+    align-items: flex-start;
+    margin-top: 30px;
+}
+
+.form-wrapper {
+    animation: hideLayer .3s ease-out forwards;
+}
+
+.form-wrapper.is-active {
+    animation: showLayer .3s ease-in forwards;
+}
+
+@keyframes showLayer {
+    50% {
+        z-index: 1;
+    }
+    100% {
+        z-index: 1;
+    }
+}
+
+@keyframes hideLayer {
+    0% {
+        z-index: 1;
+    }
+    49.999% {
+        z-index: 1;
+    }
+}
+
+.switcher {
+    position: relative;
+    cursor: pointer;
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
+    padding: 0;
+    text-transform: uppercase;
+    font-family: inherit;
+    font-size: 30px;
+    letter-spacing: .5px;
+    color: rgb(0, 0, 0);
+    background-color: transparent;
+    border: none;
+    outline: none;
+    transform: translateX(0);
+    transition: all .3s ease-out;
+}
+
+.form-wrapper.is-active .switcher-login {
+    color: rgb(238, 76, 76);
+    transform: translateX(90px);
+}
+
+.form-wrapper.is-active .switcher-signup {
+    color: rgb(238, 76, 76);
+    transform: translateX(-90px);
+}
+
+.underline {
+    position: absolute;
+    bottom: -5px;
+    left: 0;
+    overflow: hidden;
+    pointer-events: none;
+    width: 100%;
+    height: 2px;
+}
+
+.underline::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: inherit;
+    display: block;
+    width: inherit;
+    height: inherit;
+    background-color: currentColor;
+    transition: transform .2s ease-out;
+}
+
+.switcher-login .underline::before {
+    transform: translateX(101%);
+}
+
+.switcher-signup .underline::before {
+    transform: translateX(-101%);
+}
+
+.form-wrapper.is-active .underline::before {
+    transform: translateX(0);
+}
+
+.form {
+    overflow: hidden;
+    min-width: 500px;
+    margin-top: 50px;
+    padding: 30px 25px;
+    border-radius: 5px;
+    transform-origin: top;
+}
+
+.form-login {
+    animation: hideLogin .3s ease-out forwards;
+}
+
+.form-wrapper.is-active .form-login {
+    animation: showLogin .3s ease-in forwards;
+}
+
+@keyframes showLogin {
+    0% {
+        background: #d7e7f1;
+        transform: translate(40%, 10px);
+    }
+    50% {
+        transform: translate(0, 0);
+    }
+    100% {
+        background-color: rgb(73, 167, 255);
+        transform: translate(35%, -20px);
+    }
+}
+
+@keyframes hideLogin {
+    0% {
+        background-color: rgb(73, 167, 255);
+        transform: translate(35%, -20px);
+    }
+    50% {
+        transform: translate(0, 0);
+    }
+    100% {
+        background: #b4e2ff;
+        transform: translate(40%, 10px);
+    }
+}
+
+.form-signup {
+    animation: hideSignup .3s ease-out forwards;
+}
+
+.form-wrapper.is-active .form-signup {
+    animation: showSignup .3s ease-in forwards;
+}
+
+@keyframes showSignup {
+    0% {
+        background: #34b1ff;
+        transform: translate(-40%, 10px) scaleY(.8);
+    }
+    50% {
+        transform: translate(0, 0) scaleY(.8);
+    }
+    100% {
+        background-color: rgb(255, 205, 205);
+        transform: translate(-35%, -20px) scaleY(1);
+    }
+}
+
+@keyframes hideSignup {
+    0% {
+        background-color: #fff;
+        transform: translate(-35%, -20px) scaleY(1);
+    }
+    50% {
+        transform: translate(0, 0) scaleY(.8);
+    }
+    100% {
+        background: rgb(255, 205, 205);
+        transform: translate(-40%, 10px) scaleY(.8);
+    }
+}
+
+.form fieldset {
+    position: relative;
+    opacity: 0;
+    margin: 0;
+    padding: 0;
+    border: 0;
+    transition: all .3s ease-out;
+}
+
+.form-login fieldset {
+    transform: translateX(-50%);
+}
+
+.form-signup fieldset {
+    transform: translateX(50%);
+}
+
+.form-wrapper.is-active fieldset {
+    opacity: 1;
+    transform: translateX(0);
+    transition: opacity .4s ease-in, transform .35s ease-in;
+}
+
+.form legend {
+    position: absolute;
+    overflow: hidden;
+    width: 1px;
+    height: 1px;
+    clip: rect(0 0 0 0);
+}
+
+.input-block {
+    margin-bottom: 20px;
+}
+
+.input-block label {
+    font-size: 14px;
+    color: #000000;
+}
+
+.input-block input {
+    display: block;
+    width: 100%;
+    margin-top: 8px;
+    padding-right: 15px;
+    padding-left: 15px;
+    font-size: 16px;
+    line-height: 40px;
+    color: #3b4465;
+    background: #eef9fe;
+    border: 1px solid #cddbef;
+    border-radius: 2px;
+}
+
+.form [type='submit'] {
+    opacity: 0;
+    display: block;
+    min-width: 120px;
+    margin: 30px auto 10px;
+    font-size: 18px;
+    line-height: 40px;
+    border-radius: 25px;
+    border: none;
+    transition: all .3s ease-out;
+}
+
+.form-wrapper.is-active .form [type='submit'] {
+    opacity: 1;
+    transform: translateX(0);
+    transition: all .4s ease-in;
+}
+
+.btn-login {
+    color: #fbfdff;
+    background: #ff5454;
+    transform: translateX(-30%);
+    cursor: pointer;
+}
+
+
+
+.btn-signup {
+    color: #ffffff;
+    background: #ff5454;
+    box-shadow: inset 0 0 0 2px #ff5454;
+    transform: translateX(30%);
+    cursor: pointer;
 }
