--- a/public/css/Styles/login_signup.css
+++ b/public/css/Styles/login_signup.css
@@ -5,12 +5,12 @@
 }
 
 body {
-    background-image: url(../Img/bg1.jpg);
+    background-image: url(../../Img/bg1.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
     position: relative;
-   
+
     display: flex;
 	justify-content: center;
 	align-items: center;
@@ -96,7 +96,7 @@ input {
 .container {
 	background-color: #fff;
 	border-radius: 10px;
-  	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 
+  	box-shadow: 0 14px 28px rgba(0,0,0,0.25),
 			0 10px 10px rgba(0,0,0,0.22);
 	position: relative;
 	overflow: hidden;
@@ -141,7 +141,7 @@ input {
 		opacity: 0;
 		z-index: 1;
 	}
-	
+
 	50%, 100% {
 		opacity: 1;
 		z-index: 5;
