--- a/public/css/Styles/style.css
+++ b/public/css/Styles/style.css
@@ -2,14 +2,14 @@
 
 *{
     margin: 0;
-    padding: 0%;
+    padding: 0;
     font-family: 'Poppins', sans-serif;
 }
 
 .container{
   width: 100%;
   height: 100vh;
-  background-image: url(../Img/21.png);
+  background-image: url("../../Img/21.png");
   background-position: center;
   background-size: cover;
   padding-left: 8%;
@@ -28,7 +28,7 @@
   background-color: #e7e7e7;
   padding-right: 10%;
   padding-left: 4%;
-  
+
 }
 
 .logo{
