--- a/public/css/Styles/sstt.css
+++ b/public/css/Styles/sstt.css
@@ -8,7 +8,7 @@
 }
 
 body{
-    background-image: url(../Img/bg2.jpg);
+    background-image: url(../../img/bg2.jpg);
     background-position: center;
     background-size: cover;
     background-repeat: repeat;
@@ -51,44 +51,6 @@ body{
 }
 
 /*////////////////////////*NAVBAR SECTION*/
-
-.nav{
-    width: 1518px;
-    background-color: #fa655f;
-    margin: auto;
-    overflow: auto;
-}
-
-ul{
-    margin: 0;
-    padding: 0;
-    list-style: none;
-}
-li{
-    float: right;
-}
-a:link{
-    width: 125px;
-    text-decoration: none;
-    display: block;
-    text-align: center;
-    padding: 20px;
-    text-transform: uppercase;
-    font-size: 18px;
-    font-family: 'Poppins', sans-serif;
-}
-li a{
-    color: black;
-}
-
-a:hover{
-    background-color: rgb(224, 232, 255);
-    transition: 0.2s;
-}
-.nav a.active {
-    background-color: #2977ecd8;
-    color: white;
-}
 
 
 /*///////////////// Cards *//*///////////////*/
@@ -292,7 +254,7 @@ h2 {
 }
 
 .select-selected {
-    background-color: DodgerBlue;
+    background-color: rgba(255, 93, 93, 0.89);
 }
 
 /*style the arrow inside the select element:*/
@@ -326,7 +288,7 @@ h2 {
 /*style items (options):*/
 .select-items {
     position: absolute;
-    background-color: DodgerBlue;
+    background-color: rgba(255, 93, 93, 0.89);
     top: 100%;
     left: 0;
     right: 0;
@@ -367,12 +329,7 @@ h2 {
     background: transparent;
     box-shadow: 0 4px 20px -2px #c0c0c0;
 }
-.custom-select {
-    position: absolute;
-    font-family: Arial;
-    text-align: center;
-    margin-left: -17%;
-}
+
 /* Form text input */
 
 .search-wrapper input {
@@ -474,6 +431,68 @@ textarea{
 }
 
 
+.cooontainer {
+    display: block;
+    position: relative;
+    padding-left: 35px;
+    margin-bottom: 12px;
+    cursor: pointer;
+    font-size: 18px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+/* Hide the browser's default radio button */
+.cooontainer input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+}
+
+/* Create a custom radio button */
+.checkmark {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 25px;
+    width: 25px;
+    background-color: #eee;
+    border-radius: 50%;
+}
+
+/* On mouse-over, add a grey background color */
+.cooontainer:hover input ~ .checkmark {
+    background-color: #ccc;
+}
+
+/* When the radio button is checked, add a blue background */
+.cooontainer input:checked ~ .checkmark {
+    background-color: #2196F3;
+}
+
+/* Create the indicator (the dot/circle - hidden when not checked) */
+.checkmark:after {
+    content: "";
+    position: absolute;
+    display: none;
+}
+
+/* Show the indicator (dot/circle) when checked */
+.cooontainer input:checked ~ .checkmark:after {
+    display: block;
+}
+
+/* Style the indicator (dot/circle) */
+.cooontainer .checkmark:after {
+    top: 9px;
+    left: 9px;
+    width: 9px;
+    height: 9px;
+    border-radius: 50%;
+    background: white;
+}
 
 
 *,
@@ -764,4 +783,181 @@ body {
     box-shadow: inset 0 0 0 2px #ff5454;
     transform: translateX(30%);
     cursor: pointer;
+}
+
+
+
+select {
+
+    /* styling */
+    background-color: white;
+    border: thin solid blue;
+    border-radius: 4px;
+    display: inline-block;
+    font: inherit;
+    line-height: 1.5em;
+    padding: 0.5em 3.5em 0.5em 1em;
+    text-align: center;
+    font-size: 20px;
+
+    /* reset */
+
+    margin: 0;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+}
+
+
+/* arrows */
+
+select.classic {
+    background-image:
+        linear-gradient(45deg, transparent 50%, blue 50%),
+        linear-gradient(135deg, blue 50%, transparent 50%),
+        linear-gradient(to right, skyblue, skyblue);
+    background-position:
+        calc(100% - 20px) calc(1em + 2px),
+        calc(100% - 15px) calc(1em + 2px),
+        100% 0;
+    background-size:
+        5px 5px,
+        5px 5px,
+        2.5em 2.5em;
+    background-repeat: no-repeat;
+}
+
+select.classic:focus {
+    background-image:
+        linear-gradient(45deg, white 50%, transparent 50%),
+        linear-gradient(135deg, transparent 50%, white 50%),
+        linear-gradient(to right, gray, gray);
+    background-position:
+        calc(100% - 15px) 1em,
+        calc(100% - 20px) 1em,
+        100% 0;
+    background-size:
+        5px 5px,
+        5px 5px,
+        2.5em 2.5em;
+    background-repeat: no-repeat;
+    border-color: grey;
+    outline: 0;
+}
+
+
+
+select:-moz-focusring {
+    color: transparent;
+    text-shadow: 0 0 0 #000;
+}
+
+
+
+.registration-form{
+    padding: 50px 0;
+}
+
+.registration-form form{
+    background-color: #fff;
+    max-width: 600px;
+    margin: auto;
+    padding: 50px 70px;
+    border-top-left-radius: 30px;
+    border-top-right-radius: 30px;
+    border-bottom-left-radius: 30px;
+    border-bottom-right-radius: 30px;
+    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.075);
+
+}
+
+.registration-form .form-icon{
+    text-align: center;
+    background-color: #5891ff;
+    border-radius: 50%;
+    font-size: 40px;
+    color: white;
+    width: 100px;
+    height: 100px;
+    margin: auto;
+    margin-bottom: 50px;
+    line-height: 100px;
+}
+
+.registration-form .item{
+    border-radius: 20px;
+    margin-bottom: 25px;
+    padding: 10px 20px;
+}
+
+.registration-form .create-account{
+    border-radius: 30px;
+    padding: 10px 20px;
+    font-size: 18px;
+    font-weight: bold;
+    background-color: #5791ff;
+    border: none;
+    color: white;
+    margin-top: 20px;
+}
+
+.registration-form .social-media{
+    max-width: 600px;
+    background-color: #fff;
+    margin: auto;
+    padding: 35px 0;
+    text-align: center;
+    border-bottom-left-radius: 30px;
+    border-bottom-right-radius: 30px;
+    color: #9fadca;
+    border-top: 1px solid #dee9ff;
+    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.075);
+}
+
+.registration-form .social-icons{
+    margin-top: 30px;
+    margin-bottom: 16px;
+}
+
+.registration-form .social-icons a{
+    font-size: 23px;
+    margin: 0 3px;
+    color: #5691ff;
+    border: 1px solid;
+    border-radius: 50%;
+    width: 45px;
+    display: inline-block;
+    height: 45px;
+    text-align: center;
+    background-color: #fff;
+    line-height: 45px;
+}
+
+
+
+@media (max-width: 576px) {
+    .registration-form form{
+        padding: 50px 20px;
+    }
+
+    .registration-form .form-icon{
+        width: 70px;
+        height: 70px;
+        font-size: 30px;
+        line-height: 70px;
+    }
+}
+
+.newww{
+    width: 30%;
+    height: 30%;
+    display: block;
+    margin-right: 35%;
+    margin-bottom: 5%;
+}
+
+.a :hover{
+    color: red;
 }
